Changelog
=========

2.2a1 (unreleased)
------------------

- Update ICONMAP (.gif to .png).
  [mathias.leimgruber]

- Move content type profile definitions from Products.CMFPlone into here.
  (Merge of PLIP 12344)
  [davisagli et al.]

- Remove the presentation mode setting from documents.
  If the feature is still desired, use the plone.app.s5slideshow
  addon.
  [davisagli]


2.1.12 (2013-03-05)
-------------------

- Fix missing references on copy of (old-style) Collection path
  criterion and relatedItems on stock content using the schema
  flag keepReferencesOnCopy.  Refs: https://dev.plone.org/ticket/9919
  [seanupton]


2.1.11 (2013-01-13)
-------------------

- Fix deprecated import from Archetypes: use atapi instead of public
  [toutpt]

2.1.10 (2012-12-09)
-------------------

- change string ownership to creators as it makes more sense
  refs http://dev.plone.org/ticket/8725
  [maartenkling]

- Make sure ATTopic.queryCatalog cannot be published. This fixes
  http://plone.org/products/plone/security/advisories/20121106/14
  [davisagli]

2.1.9 (2012-10-11)
------------------

- Silence false security warning during startup complaining about
  `ATTopic.setText`.
  [hannosch]

- Notify modified when an image is transformed
  through transform image tab.
  This updates modification date and refresh Etag.
  Refs http://dev.plone.org/ticket/13169.
  [thomasdesvenain]

- add @@download view for IFileContent
  [vangheem]

- Implement ISyndicatable for folder and topic in 4.3
  [vangheem]


2.1.8 (2012-08-18)
------------------

- Fixes album view - when scales generation failed,
  file name appeared twice.
  Refs http://dev.plone.org/ticket/13082.
  [thomasdesvenain]

- PEP 8 (ignoring W602, E301, E501 and E701).
  [hvelarde]

- Deprecated aliases were replaced on tests.
  [hvelarde]

- iCal export: Don't escape COLON character in TEXT property.
  Fixes http://dev.plone.org/ticket/11540.
  [patch by jenskl, applied by kleist]
